<resources>
    <string name="app_name">Quiz App</string>
    <string name="title">Computer Fundamentals!</string>
    <string name="your_name">Your name</string>
    <string name="question1">1) The brain of any computer system is?</string>
    <string name="q1_op1">ALU</string>
    <string name="q1_op2">CPU</string>
    <string name="q1_op3">Memory</string>
    <string name="q1_op4">Control unit</string>
    <string name="question2">2) Which of the following is the 1\'s complement of 10?</string>
    <string name="q2_op1">01</string>
    <string name="q2_op2">101</string>
    <string name="q2_op3">110</string>
    <string name="q2_op4">010</string>
    <string name="question3">3) The binary system uses powers of?</string>
    <string name="q3_op1">2</string>
    <string name="q3_op2">10</string>
    <string name="q3_op3">8</string>
    <string name="q3_op4">16</string>
    <string name="question4">4) A computer program that converts assembly language to machine language is?</string>
    <string name="q4_op1">Compiler</string>
    <string name="q4_op2">Interpreter</string>
    <string name="q4_op3">Assembler</string>
    <string name="q4_op4">Comparator</string>
    <string name="question5">5) In a computer RAM is a?</string>
    <string name="q5_op1">Random access memory</string>
    <string name="q5_op2">Cache memory</string>
    <string name="q5_op3">Read all memory</string>
    <string name="q5_op4">Secondary memory</string>
    <string name="question6">6) Which output device is used for translating information from a computer into pictorial form on paper?</string>
    <string name="q6_op1">Mouse</string>
    <string name="q6_op2">Plotter</string>
    <string name="q6_op3">Touch panel</string>
    <string name="q6_op4">Card punch</string>
    <string name="question7">7) The list of coded instructions is called?</string>
    <string name="q7_op1">Computer program</string>
    <string name="q7_op2">Algorithm</string>
    <string name="q7_op3">Algorithm</string>
    <string name="q7_op4">Utility programs</string>
    <string name="question8">8) What is the full form of CPU?</string>
    <string name="type_here">Type Your Answer Here.</string>
    <string name="submit">Submit</string>
</resources>
