<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="24dp"
            android:textColor="#050505"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Your name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question1"
            android:textColor="#332C2C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q1_op1"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/Question1_Option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q1_op2"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q1_op3"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q1_op4"
                android:textSize="12sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question2"
            android:textSize="16sp"
            android:textColor="#332C2C"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/Question2_Option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q2_op1"
                android:textSize="12sp" />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q2_op2"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q2_op3"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q2_op4"
                android:textSize="12sp" />

        </RadioGroup>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question3"
            android:textSize="16sp"
            android:textColor="#332C2C"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/Question3_Option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q3_op1"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q3_op2"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q3_op3"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q3_op4"
                android:textSize="12sp" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question4"
            android:textSize="16sp"
            android:textColor="#332C2C"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q4_op1"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q4_op2"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/Question4_Option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q4_op3"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q4_op4"
                android:textSize="12sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question5"
            android:textSize="16sp"
            android:textColor="#332C2C"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/Question5_Option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="1dp"
            android:text="@string/q5_op1"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/Question5_Option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="1dp"
            android:text="@string/q5_op2"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/Question5_Option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="1dp"
            android:text="@string/q5_op3"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/Question5_Option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="1dp"
            android:text="@string/q5_op4"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question6"
            android:textSize="16sp"
            android:textColor="#332C2C"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q6_op1"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/Question6_Option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q6_op2"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q6_op3"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q6_op4"
                android:textSize="12sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question7"
            android:textSize="16sp"
            android:textColor="#332C2C"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/Question7_Option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q7_op1"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q7_op2"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/q7_op3"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="1dp"
                android:text="@string/q7_op4"
                android:textSize="12sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question8"
            android:textSize="16sp"
            android:textColor="#332C2C"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/type_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="1dp"
            android:hint="@string/type_here"
            android:textSize="12sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="68dp"
            android:gravity="center"
            android:onClick="submitQuiz"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>